product and variant repository finished